# Modular-Data-Science

./: .gitignore  README.md  pyproject.toml  setup.cfg
config/: main.yaml
data/interim/: iris.pq
notebooks/: test.ipynb
src/data_ingestion/: data.py
src/feature_engineering/: feature.py
src/modelling/: train.py
