[tool.poetry]
name = "Modular-Data-Science"
version = "1.0.0"
description = ""
authors = ["yeungadrian"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
pandas = "^2.0.1"
prefect = "^2.10.10"
mlflow = "^2.3.2"
omegaconf = "^2.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
notebook = "^6.5.4"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py310']
